--- a/stylestop.css
+++ b/stylestop.css
@@ -1,5 +1,9 @@
+@font-face {
+    font-family: 'Blippo';
+    src: url('fonts/Blippo.ttf') format('truetype');
+}
 body {
-    font-family: 'Bryndan Write', cursive;
+    font-family: 'Blippo', sans-serif;
     background-color: #000;
     color: #fff;
     text-align: center;
