--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,6 @@
-@font-face {
-    font-family: 'Blippo';
-    src: url('fonts/Blippo.ttf') format('truetype');
-}
+
 body {
-    font-family: 'Blippo', sans-serif;
+    font-family: 'Georgia', serif;
     background-color: #f0f0f0;
     color: #333;
     text-align: center;
