--- a/stylestop.css
+++ b/stylestop.css
@@ -1,9 +1,6 @@
-@font-face {
-    font-family: 'Blippo';
-    src: url('fonts/Blippo.ttf') format('truetype');
-}
+
 body {
-    font-family: 'Blippo', sans-serif;
+    font-family: 'Georgia', serif;
     background-color: #000;
     color: #fff;
     text-align: center;
